Another attempt at bug fix: On Mac OS X, the bottom of the extension preferences dialog is cut off (issue #9)

--- a/src/chrome/skin/all/options.css
+++ b/src/chrome/skin/all/options.css
@@ -36,7 +36,7 @@ prefwindow > .paneDeckContainer {
 }
 
 prefwindow[animated="true"] #pane-general {
-  height: 24em;
+  height: 26em;
 }
 
 prefwindow[animated="true"] #pane-customize {
